base_liveview_counter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  ports:
  - name: 4000-elixir
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: counter
  type: LoadBalancer
